--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,16 @@
 <meta charset="utf-8">
 
-{% include seo.html %}
+<style>
+
+::-webkit-scrollbar{width: 16px;}
+::-webkit-scrollbar-track {background-color:#4b4f52; border-radius: 16px;}
+::-webkit-scrollbar-thumb {background-color:#5e6265; border-radius: 16px;}
+::-webkit-scrollbar-thumb:hover {background: #ffd24c;}
+::-webkit-scrollbar-button:start:decrement,::-webkit-scrollbar-button:end:increment{width:12px;height:12px;background:transparent;}
+
+</style>
+
+  {% include seo.html %}
 
 {% unless site.atom_feed.hide %}
   <link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
